[package]
name = "graviton-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
lambda_runtime = "0.6.0"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
simple_logger = "2.3.0"
tokio = "1.21.0"

[[bin]]
name = "bootstrap"
path = "src/bootstrap.rs"
